docs: create /testing/ section and reorganize testing docs
- Move emulator, yaci-devkit, testing, debugging to /testing/
- Rename yaci-devkit to local-devnet for SEO
- Add redirects for old URLs
- Update internal links

--- a/scalus-site/content/multiplatform.mdx
+++ b/scalus-site/content/multiplatform.mdx
@@ -1,5 +1,5 @@
 ---
-title: Multiplatform Support - JVM, JavaScript, Native
+title: Multiplatform Support - JVM, JavaScript/Typescript, Native
 sidebarTitle: Multiplatform
 description: Scalus runs on JVM, JavaScript/Typescript (Node.js/browser), and Native platforms. Build Cardano smart contracts and offchain code that compiles to any target from the same Scala 3 codebase.
 ---
@@ -81,6 +81,6 @@ Scala Native compiles to native binaries:
 ## See Also
 
 - [Getting Started](/docs/get-started) — Set up JVM development environment
-- [Emulator](/docs/ledger/emulator) — In-memory testing (JVM/JS)
+- [Emulator](/docs/testing/emulator) — In-memory testing (JVM/JS)
 - [Transaction Builder](/docs/transaction-builder) — Build transactions (JVM/JS)
-- [Yaci DevKit](/docs/ledger/yaci-devkit) — Integration testing (JVM only)
+- [Local Devnet](/docs/testing/local-devnet) — Integration testing (JVM only)
