--- a/scalus-site/content/testing/debugging.mdx
+++ b/scalus-site/content/testing/debugging.mdx
@@ -4,7 +4,7 @@ sidebarTitle: Debugging
 description: Debug Cardano validators as regular Scala code. Use IDE debuggers, breakpoints, logging, error traces, and troubleshooting techniques for smart contracts.
 ---
 
-# Debugging Smart Contracts
+# Debugging Cardano Smart Contracts
 
 ## Scala-Level Debugging
 
@@ -108,8 +108,9 @@ object MyValidator extends Validator:
 4. Step through execution to understand behavior
 5. Fix logic errors before compiling to UPLC
 
-## Next Steps
+## See Also
 
-- **[Testing](/docs/smart-contract/testing)** - Write comprehensive tests for your validators
+- **[Unit Testing](/docs/testing/unit-testing)** - Write comprehensive tests for your validators
+- **[Emulator](/docs/testing/emulator)** - Test with in-memory Cardano node
+- **[Local Devnet](/docs/testing/local-devnet)** - Integration testing with real Cardano node
 - **[Compiling](/docs/smart-contract/compiling)** - Compile debugged validators to Plutus scripts
-- **[Optimisations](/docs/smart-contract/optimisations)** - Optimize script size and execution costs
