--- a/scalus-site/content/testing/emulator.mdx
+++ b/scalus-site/content/testing/emulator.mdx
@@ -192,7 +192,7 @@ Both Emulator and Yaci DevKit **validate transactions** and **execute Plutus scr
 
 **Use Emulator** for fast feedback during development. Instant script execution, real validation, no setup overhead.
 
-**Use [Yaci DevKit](/docs/ledger/yaci-devkit)** when you need the actual Haskell Cardano node for final validation before deployment.
+**Use [Local Devnet](/docs/testing/local-devnet)** when you need the actual Haskell Cardano node for final validation before deployment.
 
 ## Example: Testing a Minting Policy
 
@@ -235,7 +235,7 @@ test("minting policy validates token name") {
 
 ## See Also
 
-- [Yaci DevKit](/docs/ledger/yaci-devkit) — Docker-based devnet for integration testing
+- [Local Devnet](/docs/testing/local-devnet) — Docker-based devnet for integration testing
 - [Provider](/docs/ledger/provider) — The Provider interface
 - [Ledger Rules](/docs/ledger/ledger-rules) — Transaction validation rules
 - [Transaction Builder](/docs/transaction-builder) — Building transactions
