--- a/scalus-site/content/testing/unit-testing.mdx
+++ b/scalus-site/content/testing/unit-testing.mdx
@@ -1,10 +1,10 @@
 ---
-title: Testing Cardano Smart Contracts
-sidebarTitle: Testing
+title: Unit Testing Cardano Smart Contracts with ScalaCheck
+sidebarTitle: Unit Testing
 description: Test Cardano validators using property-based testing with ScalaCheck. Generate random test data, create test scenarios, and ensure validator correctness.
 ---
 
-# Testing Smart Contracts
+# Unit Testing Cardano Smart Contracts
 
 Scalus leverages [ScalaCheck](https://www.scalacheck.org/) for property-based testing of validators, enabling you to test your contracts robustly across a wide range of inputs.
 
