docs: promote design-patterns to root with optimized URLs
- Move /learning/design-patterns/ to /design-patterns/
- Rename for SEO: withdraw-zero, transaction-level-minting, validity-range
- Drop redundant -pattern suffix from all URLs
- Add index page and update redirects

--- a/scalus-site/content/learning/scalus-starter.mdx
+++ b/scalus-site/content/learning/scalus-starter.mdx
@@ -488,4 +488,4 @@ scalus-starter/
 - **[Smart Contracts](/docs/smart-contract/developing-smart-contracts)** — Deep dive into validators
 - **[Transaction Builder](/docs/transaction-builder)** — Advanced transaction patterns
 - **[Testing](/docs/smart-contract/testing)** — Property-based testing with ScalaCheck
-- **[Design Patterns](/docs/learning/design-patterns)** — Optimization patterns for efficient contracts
+- **[Design Patterns](/docs/design-patterns)** — Optimization patterns for efficient contracts
