docs: rename transaction-builder to transactions
- Rename /transaction-builder/ to /transactions/
- Update index page with broader intro
- Fix all internal links (content, app/page.jsx)
- Add redirects for all pages

--- a/scalus-site/content/index.mdx
+++ b/scalus-site/content/index.mdx
@@ -32,7 +32,7 @@ import { DescriptionCards } from '../components/DescriptionCards'
   <DescriptionCards.Card
     icon="🏗️"
     title="Build Transactions"
-    href="/docs/transaction-builder/building-first-transaction"
+    href="/docs/transactions/building-first-transaction"
     description="Construct and submit Cardano transactions with TxBuilder"
   />
   <DescriptionCards.Card
@@ -68,10 +68,10 @@ Scalus supports the complete development workflow for Cardano applications:
 
 - **Write** - [Cardano smart contracts in Scala 3](/docs/smart-contract/developing-smart-contracts) that compile to UPLC
 - **Optimize** - Use [advanced optimization techniques](/docs/smart-contract/optimisations) to reduce on-chain costs
-- **Debug** - [Debug validators](/docs/smart-contract/debugging) as regular Scala code with your IDE's debugger
-- **Build** - [Construct transactions](/docs/transaction-builder) with the transaction builder and evaluate them off-chain
+- **Debug** - [Debug validators](/docs/testing/debugging) as regular Scala code with your IDE's debugger
+- **Build** - [Construct transactions](/docs/transactions) with the transaction builder and evaluate them off-chain
 - **Integrate** - Seamlessly integrate on-chain and off-chain components in your full-stack application
-- **Test** - [Test thoroughly](/docs/smart-contract/testing) with unit, integration, and property-based tests
+- **Test** - [Test thoroughly](/docs/testing) with unit, integration, and property-based tests
 - **Deploy** - Verify on testnet and deploy production-ready applications to mainnet with confidence
 
 ## Modern Development Experience
