--- a/scalus-site/content/learning/scalus-starter.mdx
+++ b/scalus-site/content/learning/scalus-starter.mdx
@@ -486,6 +486,6 @@ scalus-starter/
 
 - **[Language Guide](/docs/language-guide)** — Scalus syntax and supported Scala features
 - **[Smart Contracts](/docs/smart-contract/developing-smart-contracts)** — Deep dive into validators
-- **[Transaction Builder](/docs/transaction-builder)** — Advanced transaction patterns
-- **[Testing](/docs/smart-contract/testing)** — Property-based testing with ScalaCheck
+- **[Transaction Builder](/docs/transactions)** — Advanced transaction patterns
+- **[Testing](/docs/testing/unit-testing)** — Property-based testing with ScalaCheck
 - **[Design Patterns](/docs/design-patterns)** — Optimization patterns for efficient contracts
