--- a/scalus-site/content/ledger/ledger-rules.mdx
+++ b/scalus-site/content/ledger/ledger-rules.mdx
@@ -11,7 +11,7 @@ import { Callout } from 'nextra/components'
 
 Scalus implements Cardano's ledger validation rules in pure Scala 3, running on **JVM**, **JavaScript**, and **Native** platforms.
 
-These rules power the [Emulator](/docs/ledger/emulator) for fast local testing, and can be used standalone for transaction validation.
+These rules power the [Emulator](/docs/testing/emulator) for fast local testing, and can be used standalone for transaction validation.
 
 <Callout type="warning">
   The Ledger Rules Framework is in active development and may change.
@@ -172,6 +172,6 @@ All rules follow the State Transition System (STS) pattern, providing a type-saf
 
 ## See Also
 
-- [Emulator](/docs/ledger/emulator) — In-memory node using these rules for fast testing
-- [Yaci DevKit](/docs/ledger/yaci-devkit) — Docker-based devnet with real Cardano node
+- [Emulator](/docs/testing/emulator) — In-memory node using these rules for fast testing
+- [Yaci DevKit](/docs/testing/local-devnet) — Docker-based devnet with real Cardano node
 - [Protocol Parameters](/docs/ledger/protocol-parameters) — Network configuration used by validators
