--- a/scalus-site/content/multiplatform.mdx
+++ b/scalus-site/content/multiplatform.mdx
@@ -82,5 +82,5 @@ Scala Native compiles to native binaries:
 
 - [Getting Started](/docs/get-started) — Set up JVM development environment
 - [Emulator](/docs/testing/emulator) — In-memory testing (JVM/JS)
-- [Transaction Builder](/docs/transaction-builder) — Build transactions (JVM/JS)
+- [Transaction Builder](/docs/transactions) — Build transactions (JVM/JS)
 - [Local Devnet](/docs/testing/local-devnet) — Integration testing (JVM only)
