--- a/scalus-site/content/onboarding/for-cardano-developers.mdx
+++ b/scalus-site/content/onboarding/for-cardano-developers.mdx
@@ -42,7 +42,7 @@ You'll learn:
 
 #### First Contract
 - [ ] **[Write your first smart contract](/docs/smart-contract/developing-smart-contracts)** - Build a "Hello, Cardano!" spending validator
-- [ ] **[Debug in your IDE](/docs/smart-contract/debugging)** - Set breakpoints and step through validator execution
+- [ ] **[Debug in your IDE](/docs/testing/debugging)** - Set breakpoints and step through validator execution
 
 **🎯 Quick Win:** You'll have a working validator and see it execute step-by-step in IntelliJ IDEA or VS Code. No more blind `trace` debugging!
 
@@ -106,7 +106,7 @@ You'll learn:
 
 #### Testing & Quality
 
-- [ ] **[Testing Smart Contracts](/docs/smart-contract/testing)** - Property-based testing with ScalaCheck
+- [ ] **[Testing Smart Contracts](/docs/testing/unit-testing)** - Property-based testing with ScalaCheck
 - [ ] **[Builtin Functions](/docs/language-guide/builtin-functions)** - Cryptographic operations, hashing, serialization
 
 #### Build & Deploy
@@ -116,12 +116,12 @@ You'll learn:
 
 #### Off-Chain Transaction Building
 
-- [ ] **[Transaction Builder](/docs/transaction-builder)** - Build complete Cardano transactions in Scala
-- [ ] **[Building Your First Transaction](/docs/transaction-builder/building-first-transaction)** - Send ADA and native tokens
-- [ ] **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Spend from validator scripts
-- [ ] **[Minting & Burning Assets](/docs/transaction-builder/minting-burning-assets)** - Create and burn native tokens
-- [ ] **[Staking & Rewards](/docs/transaction-builder/staking-rewards)** - Register, delegate, and withdraw rewards
-- [ ] **[Governance](/docs/transaction-builder/governance)** - Participate in Cardano governance with DReps
+- [ ] **[Transaction Builder](/docs/transactions)** - Build complete Cardano transactions in Scala
+- [ ] **[Building Your First Transaction](/docs/transactions/building-first-transaction)** - Send ADA and native tokens
+- [ ] **[Spending UTxOs](/docs/transactions/spending-utxos)** - Spend from validator scripts
+- [ ] **[Minting & Burning Assets](/docs/transactions/minting-burning-assets)** - Create and burn native tokens
+- [ ] **[Staking & Rewards](/docs/transactions/staking-rewards)** - Register, delegate, and withdraw rewards
+- [ ] **[Governance](/docs/transactions/governance)** - Participate in Cardano governance with DReps
 
 **🎯 Quick Win:** Build a tested, optimized validator and deploy it to testnet with a complete off-chain application that interacts with it.
 </Steps>
