--- a/scalus-site/content/smart-contract/developing-smart-contracts.mdx
+++ b/scalus-site/content/smart-contract/developing-smart-contracts.mdx
@@ -166,7 +166,7 @@ HelloCardanoTest:
   - HelloCardano fails with wrong message
 ```
 
-Learn more about [Testing Smart Contracts](/docs/smart-contract/testing).
+Learn more about [Testing Smart Contracts](/docs/testing/unit-testing).
 
 ## Debugging
 
@@ -183,7 +183,7 @@ Look how simple it is!
 
 <iframe width="800" height="450" src="https://www.youtube.com/embed/YW5cMnH2b14?si=MBwq2gu-ii4qtdrS&amp;" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
 
-Learn more about [Debugging Smart Contracts](/docs/smart-contract/debugging).
+Learn more about [Debugging Smart Contracts](/docs/testing/debugging).
 
 ## Compiling into Plutus script
 
@@ -238,7 +238,7 @@ Congratulations! You've successfully created, tested, and debugged your first Ca
 ### Continue Your Journey
 
 - **[Validators in Depth](/docs/smart-contract/validators)** - Learn about different validator types and patterns
-- **[Testing Smart Contracts](/docs/smart-contract/testing)** - Advanced testing techniques and property-based testing
-- **[Debugging and Troubleshooting](/docs/smart-contract/debugging)** - Deep dive into debugging strategies
+- **[Testing Smart Contracts](/docs/testing/unit-testing)** - Advanced testing techniques and property-based testing
+- **[Debugging and Troubleshooting](/docs/testing/debugging)** - Deep dive into debugging strategies
 - **[Compiling Smart Contracts](/docs/smart-contract/compiling)** - Generate plutus script and use in your transactions
 - **[Examples Repository](https://github.com/scalus3/scalus/tree/master/scalus-examples)** - Real-world validator examples
