--- a/scalus-site/content/smart-contract/index.mdx
+++ b/scalus-site/content/smart-contract/index.mdx
@@ -22,8 +22,8 @@ This section covers everything from writing your first validator to advanced opt
 
 ## Development Workflow
 
-- **[Testing](/docs/smart-contract/testing)** - Property-based testing with ScalaCheck, using the `ScalusTest` trait, and creating robust test scenarios.
-- **[Debugging](/docs/smart-contract/debugging)** - Debug validators as regular Scala code using your IDE's debugger, breakpoints, and logging.
+- **[Testing](/docs/testing/unit-testing)** - Property-based testing with ScalaCheck, using the `ScalusTest` trait, and creating robust test scenarios.
+- **[Debugging](/docs/testing/debugging)** - Debug validators as regular Scala code using your IDE's debugger, breakpoints, and logging.
 - **[Compiling](/docs/smart-contract/compiling)** - Transform Scala validators into Plutus scripts, generate contract blueprints, and handle parameterized validators.
 
 ## Advanced Topics
