--- a/scalus-site/content/testing/emulator.mdx
+++ b/scalus-site/content/testing/emulator.mdx
@@ -238,4 +238,4 @@ test("minting policy validates token name") {
 - [Local Devnet](/docs/testing/local-devnet) — Docker-based devnet for integration testing
 - [Provider](/docs/ledger/provider) — The Provider interface
 - [Ledger Rules](/docs/ledger/ledger-rules) — Transaction validation rules
-- [Transaction Builder](/docs/transaction-builder) — Building transactions
+- [Transaction Builder](/docs/transactions) — Building transactions
