--- a/scalus-site/content/onboarding/for-scala-developers.mdx
+++ b/scalus-site/content/onboarding/for-scala-developers.mdx
@@ -43,7 +43,7 @@ You'll learn:
 
 #### Write you First Smart Contract
 - [ ] **[Write your first smart contract](/docs/smart-contract/developing-smart-contracts)** - Build a spending validator
-- [ ] **[Debug in your IDE](/docs/smart-contract/debugging)** - Set breakpoints and inspect execution
+- [ ] **[Debug in your IDE](/docs/testing/debugging)** - Set breakpoints and inspect execution
 
 **🎯 Quick Win:** You'll have a working Cardano validator and debug it with IntelliJ IDEA's debugger. Yes, **real breakpoints on blockchain code!**
 
@@ -100,7 +100,7 @@ Always check [Supported Features](/docs/language-guide/support)!
 <Steps>
 #### Testing & Quality
 
-- [ ] **[Testing Smart Contracts](/docs/smart-contract/testing)** - Use ScalaCheck for property-based testing
+- [ ] **[Testing Smart Contracts](/docs/testing/unit-testing)** - Use ScalaCheck for property-based testing
 - [ ] **[Custom Data Types](/docs/language-guide/data-types)** - Define datums and redeemers with case classes
 - [ ] **[Collections](/docs/language-guide/collections)** - `List`, `AssocMap` for on-chain data
 
@@ -128,12 +128,12 @@ class MyValidatorTest extends AnyFunSuite with ScalusTest:
 
 #### Off-Chain Transaction Building
 
-- [ ] **[Transaction Builder](/docs/transaction-builder)** - Build complete Cardano transactions in Scala
-- [ ] **[Building Your First Transaction](/docs/transaction-builder/building-first-transaction)** - Send ADA and native tokens
-- [ ] **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Spend from validator scripts with redeemers
-- [ ] **[Minting & Burning Assets](/docs/transaction-builder/minting-burning-assets)** - Create and manage native tokens
-- [ ] **[Staking & Rewards](/docs/transaction-builder/staking-rewards)** - Stake delegation and reward withdrawal
-- [ ] **[Governance](/docs/transaction-builder/governance)** - DRep registration and voting delegation
+- [ ] **[Transaction Builder](/docs/transactions)** - Build complete Cardano transactions in Scala
+- [ ] **[Building Your First Transaction](/docs/transactions/building-first-transaction)** - Send ADA and native tokens
+- [ ] **[Spending UTxOs](/docs/transactions/spending-utxos)** - Spend from validator scripts with redeemers
+- [ ] **[Minting & Burning Assets](/docs/transactions/minting-burning-assets)** - Create and manage native tokens
+- [ ] **[Staking & Rewards](/docs/transactions/staking-rewards)** - Stake delegation and reward withdrawal
+- [ ] **[Governance](/docs/transactions/governance)** - DRep registration and voting delegation
 
 **🎯 Quick Win:** Deploy a fully tested validator to Cardano testnet and build a complete off-chain application to interact with it.
 </Steps>
@@ -148,7 +148,7 @@ class MyValidatorTest extends AnyFunSuite with ScalusTest:
 - [ ] **[Advanced Optimizations](/docs/smart-contract/optimisations)** - Reduce script size and execution costs
 - [ ] **[Modules](/docs/language-guide/modules)** - Build reusable validator libraries
 - [ ] **[Real-World Examples](https://github.com/scalus3/scalus/tree/master/scalus-examples)** - Study production patterns
-- [ ] **[Transaction Builder](/docs/transaction-builder)** - Build complete off-chain applications
+- [ ] **[Transaction Builder](/docs/transactions)** - Build complete off-chain applications
 
 #### Design Patterns & Security
 
