docs: rename smart-contract to smart-contracts
- Rename /smart-contract/ to /smart-contracts/
- Update all internal links
- Add redirects for published pages

--- a/scalus-site/content/transactions/index.mdx
+++ b/scalus-site/content/transactions/index.mdx
@@ -14,6 +14,7 @@ Scalus provides a fluent API for constructing Cardano transactions — payments,
 ## What You Can Build
 
 - **[Payments](/docs/transactions/payment-methods)** — Send ADA and native tokens
+- **[Spending UTxOs](/docs/transactions/spending-utxos)** — Spending UTxOs from wallet and script addresses
 - **[Token Minting](/docs/transactions/minting-burning-assets)** — Create and burn native assets
 - **[Staking](/docs/transactions/staking-rewards)** — Delegate stake and withdraw rewards
 - **[Governance](/docs/transactions/governance)** — DRep registration and voting
