docs: move onboarding pages under get-started
- Convert get-started.mdx to get-started/index.mdx
- Move for-scala-developers and for-cardano-developers from onboarding/
- Remove redundant onboarding/index.mdx content (covered by main get-started)
- Add redirects from /docs/onboarding/* to /docs/get-started/*

--- a/scalus-site/content/get-started/index.mdx
+++ b/scalus-site/content/get-started/index.mdx
@@ -1,4 +1,5 @@
 ---
+asIndexPage: true
 title: Getting Started with Scalus
 description: Complete guide to setting up Scalus development environment. Install Scala 3, create your first Cardano smart contract validator, and start building dApps in minutes.
 sidebarTitle: Getting Started
@@ -146,4 +147,6 @@ Now that you have your development environment set up and a working validator, c
 - **[Learn Smart Contract Development](/docs/smart-contracts/developing-smart-contracts)** - Deep dive into writing Cardano validators with Scala 3, understanding the compilation process, and leveraging the Scalus type system
 - **[Build and Submit Transactions](/docs/transactions/building-first-transaction)** - Use TxBuilder to construct transactions, evaluate scripts off-chain, and submit them to the Cardano network
 
-**New to Cardano or Scala?** Check out our [onboarding guides](/docs/onboarding) for developers coming from either ecosystem.
+**New to Cardano or Scala?** Check out our onboarding guides:
+- **[For Scala Developers](/docs/get-started/for-scala-developers)** — Cardano concepts for Scala developers
+- **[For Cardano Developers](/docs/get-started/for-cardano-developers)** — Scala basics for Cardano developers
