--- a/scalus-site/content/index.mdx
+++ b/scalus-site/content/index.mdx
@@ -43,7 +43,7 @@ import { DescriptionCards } from '../components/DescriptionCards'
   />
 </DescriptionCards>
 
-**New to Cardano or Scala?** Check out our [onboarding guides](/docs/onboarding) for developers coming from either ecosystem.
+**New to Cardano or Scala?** Check out our [onboarding guides](/docs/get-started) for developers coming from either ecosystem.
 
 ## Why Choose Scalus for Cardano Development?
 
