docs: create dapp-development section with improved URLs
- Rename /dapps/ to /dapp-development/
- Rename building-first-dapp to dapp-starter-tutorial
- Move provider to data-providers in dapp-development
- Move protocol-parameters to dapp-development
- Update all redirects for new URLs

--- a/scalus-site/content/dapp-development/dapp-starter-tutorial.mdx
+++ b/scalus-site/content/dapp-development/dapp-starter-tutorial.mdx
@@ -1,6 +1,6 @@
 ---
-title: Building Your First DApp with Scalus Starter
-sidebarTitle: Building First DApp
+title: DApp Starter Tutorial
+sidebarTitle: DApp Starter Tutorial
 description: Learn how to build a complete Cardano DApp using Scalus Starter. This hands-on tutorial covers smart contracts, transaction building, REST APIs, and testing.
 ---
 
