--- a/scalus-site/content/dapp-development/data-providers.mdx
+++ b/scalus-site/content/dapp-development/data-providers.mdx
@@ -1,10 +1,10 @@
 ---
-title: Provider
-sidebarTitle: Provider
-description: Interact with the Cardano blockchain using the Provider interface.
+title: Data Providers
+sidebarTitle: Data Providers
+description: Interact with the Cardano blockchain using the Provider interface. Connect to Blockfrost, Koios, or implement custom providers.
 ---
 
-# Provider
+# Data Providers
 
 The `Provider` trait is Scalus's abstraction for interacting with the Cardano blockchain. Providers allow you to send transactions and query blockchain state in a consistent way, regardless of whether you're working with a real blockchain, test node, or local emulator.
 
@@ -31,7 +31,7 @@ The Emulator is ideal for:
 - Rapid development iterations
 - Scenarios where launching a local node would be inconvenient
 
-Learn more about the Emulator in the [Emulator documentation](/ledger/emulator).
+Learn more about the Emulator in the [Emulator documentation](/docs/testing/emulator).
 
 ### BlockfrostProvider
 
