docs: rename data-providers to blockchain-providers

--- a/scalus-site/content/dapp-development/blockchain-providers.mdx
+++ b/scalus-site/content/dapp-development/blockchain-providers.mdx
@@ -1,10 +1,10 @@
 ---
-title: Data Providers
-sidebarTitle: Data Providers
+title: Blockchain Providers
+sidebarTitle: Blockchain Providers
 description: Interact with the Cardano blockchain using the Provider interface. Connect to Blockfrost, Koios, or implement custom providers.
 ---
 
-# Data Providers
+# Blockchain Providers
 
 The `Provider` trait is Scalus's abstraction for interacting with the Cardano blockchain. Providers allow you to send transactions and query blockchain state in a consistent way, regardless of whether you're working with a real blockchain, test node, or local emulator.
 
