docs: Phase 2 - improve internal links across all index pages

--- a/scalus-site/content/design-patterns/index.mdx
+++ b/scalus-site/content/design-patterns/index.mdx
@@ -33,6 +33,12 @@ Reduce execution costs by delegating computation to single-execution endpoints:
 
 - **[Validity Range](/docs/design-patterns/validity-range)** — Normalize time ranges to simplify interval validation in your contracts
 
+## Related
+
+- [Security Guide](/docs/security) — Common vulnerabilities these patterns help prevent
+- [Smart Contract Optimization](/docs/smart-contracts/optimisations) — Compiler-level optimizations
+- [Testing](/docs/testing/unit-testing) — Test your pattern implementations
+
 ## Resources
 
 - [Scalus Design Patterns](https://github.com/scalus3/scalus/tree/master/scalus-design-patterns) — Implementation and tests
