--- a/scalus-site/content/get-started/index.mdx
+++ b/scalus-site/content/get-started/index.mdx
@@ -142,11 +142,18 @@ This guide will help you set up your Scalus development environment and create y
 
 ## Next Steps
 
-Now that you have your development environment set up and a working validator, continue your Scalus journey:
+Now that your environment is ready, choose your path:
 
-- **[Learn Smart Contract Development](/docs/smart-contracts/developing-smart-contracts)** - Deep dive into writing Cardano validators with Scala 3, understanding the compilation process, and leveraging the Scalus type system
-- **[Build and Submit Transactions](/docs/transactions/building-first-transaction)** - Use TxBuilder to construct transactions, evaluate scripts off-chain, and submit them to the Cardano network
+**Learn the fundamentals:**
+- [Write Smart Contracts](/docs/smart-contracts/developing-smart-contracts) — Validators, data conversion, compilation
+- [Build Transactions](/docs/transactions/building-first-transaction) — Construct and submit transactions
+- [Test Locally](/docs/testing/unit-testing) — Unit testing and debugging
 
-**New to Cardano or Scala?** Check out our onboarding guides:
-- **[For Scala Developers](/docs/get-started/for-scala-developers)** — Cardano concepts for Scala developers
-- **[For Cardano Developers](/docs/get-started/for-cardano-developers)** — Scala basics for Cardano developers
+**Go deeper:**
+- [DApp Starter Tutorial](/docs/dapp-development/dapp-starter-tutorial) — Build a complete token minting service
+- [Design Patterns](/docs/design-patterns) — Optimization patterns for efficient contracts
+- [Language Guide](/docs/language-guide) — Scala 3 features supported in Scalus
+
+**New to Cardano or Scala?**
+- [For Scala Developers](/docs/get-started/for-scala-developers) — Cardano concepts
+- [For Cardano Developers](/docs/get-started/for-cardano-developers) — Scala basics
