--- a/scalus-site/content/security/index.mdx
+++ b/scalus-site/content/security/index.mdx
@@ -62,6 +62,12 @@ Writing secure Plutus validators requires careful attention to:
 
 Security is not optional in smart contract development. Study [common vulnerabilities](/docs/security/common-vulnerabilities), apply mitigations, and test exhaustively before mainnet deployment.
 
+## Related
+
+- [Design Patterns](/docs/design-patterns) — Patterns that help prevent common vulnerabilities
+- [Smart Contracts](/docs/smart-contracts) — Writing validators with Scalus
+- [Testing](/docs/testing) — Comprehensive testing strategies
+
 ## Resources
 
 - [Common Plutus Vulnerabilities](/docs/security/common-vulnerabilities) - Known vulnerability patterns and mitigations
