--- a/scalus-site/content/smart-contracts/index.mdx
+++ b/scalus-site/content/smart-contracts/index.mdx
@@ -29,3 +29,9 @@ This section covers everything from writing your first validator to advanced opt
 ## Advanced Topics
 
 - **[Advanced Optimisations](/docs/smart-contracts/optimisations)** - Macros, direct Script Context access, SIR debugging, and UPLC optimisations to reduce script size and execution costs.
+
+## Related
+
+- [Design Patterns](/docs/design-patterns) — Optimization patterns for multi-input validators
+- [Security](/docs/security) — Common vulnerabilities and how to avoid them
+- [Building Transactions](/docs/transactions/building-first-transaction) — Use your validators in transactions
