--- a/scalus-site/content/testing/index.mdx
+++ b/scalus-site/content/testing/index.mdx
@@ -113,3 +113,9 @@ Pre-deployment:
 - [Emulator](/docs/testing/emulator) — In-memory testing with instant feedback
 - [Local Devnet](/docs/testing/local-devnet) — Integration testing with real Cardano node
 - [Ledger Rules](/docs/ledger/ledger-rules) — Validation rules used by testing tools
+
+## Related
+
+- [Smart Contracts](/docs/smart-contracts) — Write validators to test
+- [Security](/docs/security) — Security testing considerations
+- [DApp Starter Tutorial](/docs/dapp-development/dapp-starter-tutorial) — Complete testing example
