--- a/scalus-site/content/language-guide/builtin-functions.mdx
+++ b/scalus-site/content/language-guide/builtin-functions.mdx
@@ -4,6 +4,8 @@ sidebarTitle: Builtin Functions
 description: Use Cardano Plutus builtin functions in Scalus smart contracts. Learn cryptographic operations, byte string manipulation, list operations, and blockchain-specific utilities.
 ---
 
+import { Callout } from 'nextra/components'
+
 # Builtin Functions
 
 Cardano Plutus provides built-in functions optimized for blockchain execution. Scalus exposes these functions through the [`Builtins`](https://scalus.org/api/scalus/builtin/Builtins$.html) object with familiar Scala syntax.
